# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Aug 2008; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.10_beta28.ebuild:
  Install both classic and next generation nsplugin (plugin2), bug #235869.

  26 Aug 2008; Serkan Kaba <serkan@gentoo.org>
  sun-jdk-1.6.0.10_beta28.ebuild:
  Add plugin2 USE flag for Next-Generation Java™ Plug-In.

*sun-jdk-1.7.0.0_alpha33 (15 Aug 2007)

  15 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
  +sun-jdk-1.7.0.0_alpha33.ebuild:
  Bump.

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  30 Jul 2008; Serkan Kaba <serkan@gentoo.org>
  sun-jdk-1.6.0.10_beta28.ebuild:
  Fix $S.

  29 Jul 2008; Serkan Kaba <serkan@gentoo.org> -files/sun-jdk-1.6.0.02.env,
  +sun-jdk-1.6.0.10_beta28.ebuild, +files/sun-jdk-1.6.env:
  Add Java 6 u10 beta.

  20 Jul 2008; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.7.0.0_alpha30.ebuild, +sun-jdk-1.7.0.0_alpha31.ebuild:
  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
  submitting the bump.

  04 Jul 2008; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.7.0.0_alpha28.ebuild, +sun-jdk-1.7.0.0_alpha30.ebuild:
  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
  submitting the bump.

  08 Jun 2008; Serkan Kaba <serkan@gentoo.org> -sun-jdk-1.7.0.0_alpha26.ebuild
  +sun-jdk-1.7.0.0_alpha28.ebuild
  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
  submitting the bump.

  02 May 2008; Serkan Kaba <serkan_kaba@yahoo.com>
  -sun-jdk-1.7.0.0_alpha18.ebuild, -sun-jdk-1.7.0.0_alpha21.ebuild,
  -sun-jdk-1.7.0.0_alpha22.ebuild, -sun-jdk-1.7.0.0_alpha23.ebuild,
  -sun-jdk-1.7.0.0_alpha24.ebuild, +sun-jdk-1.7.0.0_alpha26.ebuild:
  Bump to lastest snapshot. Prune old versions.

*sun-jdk-1.7.0.0_alpha22 (24 Oct 2007)

  24 Oct 2007; Petteri Räty <betelgeuse@gentoo.org>
  +sun-jdk-1.7.0.0_alpha22.ebuild: