@@ -11,7 +11,7 @@ ALPHA=${PV#*_alpha}
 DATE="14_aug_2008"
 MY_RPV=${MY_PV%.*}
 
-BASE_URL="http://download.java.net/jdk7/binaries/"
+BASE_URL="http://download.java.net/jdk7/archive/b33/binaries"
 x86file="jdk-7-ea-bin-b${ALPHA}-linux-i586-${DATE}.bin"
 amd64file="jdk-7-ea-bin-b${ALPHA}-linux-x64-${DATE}.bin"
 
